# Alura_Rust

./: .gitignore  01_variaveis.rs  02_constantes.rs  03_escopos.rs  04_funcoes.rs  05_ifElse.rs  06_While.rs  07_for.rs  08_Match.rs  09_Ownership.rs  10_Borrowing.rs  11_PatterMatch.rs  12_erros.rs  13_arrays.rs  14_enums.rs  15_Option.rs  16_if_let.rs  17_vetores.rs  18_structs.rs  Cargo.toml  README.md
